prepare for release

--- a/meta/makefile.ttl
+++ b/meta/makefile.ttl
@@ -6,8 +6,18 @@
 	:perl_version_from _:main;
 	:version_from _:main;
 	:readme_from _:main;
-	:requires "strict", "base", "Plack", "Crypt::X509", "DateTime", "MIME::Base64", "Gepok 0.20";
-	:test_requires "Test::More 0.61", "Net::SSL", "Net::SSLeay".
+	:requires
+		"base 0",
+		"Crypt::X509 0",
+		"DateTime 0",
+		"Gepok 0.20",
+		"MIME::Base64 0",
+		"Net::SSLeay 0",
+		"Plack 0",
+		"strict 0";
+	:test_requires
+		"Test::More 0.61",
+		"Net::SSL".
 
 _:main <http://www.semanticdesktop.org/ontologies/2007/03/22/nfo#fileName> "lib/Plack/Middleware/GepokX/ModSSL.pm".
 
